k8s/templates/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedelec-ingress
  namespace: { { .Values.namespace } }
spec:
  rules:
    - host: { { .Values.hostname } }
      http:
        paths:
          - pathType: Prefix
            path: "/server"
            backend:
              service:
                name: server-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-service
                port:
                  number: 3000
